--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "PATRON V1 BUG",
-  "description": "whatsapp bot by PATRON 🚹",
+  "name": "🅓🅔🅢🅣🅡🅞🅨🅔🅡-V9",
+  "description": "whatsapp bot by 🅓🅔🅢🅣🅡🅞🅨🅔🅡",
   "repository": "https://github.com/itzpatron",
-  "logo": "https://telegra.ph/file/e4ec68215314010a0f1f7.jpg",
+  "logo": "https://telegra.ph/Logo-08-29-10",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
